# My_Python_Things

./: .gitignore  calc.py
GUI/: ContactBook.py  contacts.db  db_editor.py  library_management.py
GUI/Mathematics/: theorem.py
GUI/Mathematics/Phytagoras Theorem/: theorem.py
GUI/Others/: PassworGeneratorGUIEdition.py  YouTubeMP3Downloader.py  bookgui.py
GUI/db-editor/: pyproject.toml  suggestions.txt
GUI/db-editor/src/: app.py  config copy.py  config.py  configuration.toml  exceptions.py  main.py
GUI/lm/: loginbackend.py  main.py  signupbackend.py
Hacking/: ARPSpooferV1.0.py  BackdoorBETA.py  Client.py  CommanderBETA.py  KeyLoggerV1.0.py  NetworkScannerV1.0.py  PRMTR.json  PWGeneratorGUIEdition.py  PassworGeneratorGUIEdition.py  PasswordGenerator.py  PasswordGeneratorV1.0.py  Wi-FiPasswordCollector.py  Wi-FiPasswordCollectorV1.0.py  backdoor.py  linux-backdoor.py  macchanger-V1.0.py  windows-backdoor.py
Others/: BankBETA.py  book.py  contacts.db  monitor.py  player.py  player1.1.py
Others/library-management/: README.txt  backup.py  command.list  configuration.py  configuration.toml  db.sqlite3  db_handler.py  main.py
Others/pm/: database.py  db_crypto.py  info.txt  main.py
Web/online_Store/: db.sqlite3  manage.py
Web/online_Store/online_Store/: asgi.py  settings.py  urls.py  wsgi.py
Web/online_Store/registration/: models.py  views.py
docs/: README.md
online_Store/: db.sqlite3  manage.py
online_Store/online_Store/: settings.py  urls.py
online_Store/registration/: models.py  views.py
pm/: database.py  main.py  proo
(+10 files in other folders)
