[tool.poetry]
name = "db-editor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC BY-NC 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
customtkinter = "^5.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
